--- a/debug-tiles/index.html
+++ b/debug-tiles/index.html
@@ -19,6 +19,7 @@ var map = window.map = new maplibregl.Map({
     container: 'map',
     zoom: 9,
     center: [0.0, 0.0],
+    pitch: 70,
     hash: true,
     style: {
         version: 8,
@@ -57,8 +58,7 @@ var map = window.map = new maplibregl.Map({
         terrain: {
             source: 'terrainSource',
             exaggeration: 1
-        },
-        sky: {}
+        }
     },
     maxZoom: 18,
     maxPitch: 85
